fix body overflow

--- a/template/scss/base/_normalize.scss
+++ b/template/scss/base/_normalize.scss
@@ -23,11 +23,6 @@ html
     -webkit-text-size-adjust: 100%;
 }
 
-body
-{
-    overflow: hidden;
-}
-
 :focus
 {
     outline: none;
